@@ -39,10 +39,10 @@ def importCSV(db):
         line = csv.reader(csvfile, delimiter = ',')
         for data in line:
             records += 1
-            if records is not 1:
+            if records != 1:
                 result = crud.selectRow(db, 'ArtistId', 'Artist', 'Name = ?', '', \
                     (data[csvFields['artist']],))
-                if len(result) is 0:
+                if len(result) == 0:
                     detail = (data[csvFields['artist']], data[csvFields['sort']],)
                     artistid = crud.insertRow(db, 'Artist(Name, Sort)', detail)
                 else:
@@ -50,20 +50,20 @@ def importCSV(db):
 
                 result = crud.selectRow(db, 'FormatId', 'Format', 'Name = ?', '', \
                     (data[csvFields['format']],))
-                if len(result) is 0:
+                if len(result) == 0:
                     formatid = crud.insertRow(db, 'Format(Name)', (data[csvFields['format']],))
                 else:
                     formatid = result[0][0]
 
                 result = crud.selectRow(db, 'GenreId', 'Genre', 'Name = ?', '', \
                     (data[csvFields['genre']],))
-                if len(result) is 0:
+                if len(result) == 0:
                     genreid = crud.insertRow(db, 'Genre(Name)', (data[csvFields['genre']],))
                 else:
                     genreid = result[0][0]
                 
                 myYear = data[csvFields['released']]
-                if myYear is '':
+                if myYear == '':
                     myYear = 1900
                 detail = (data[csvFields['album']], myYear, artistid, formatid, genreid,)
                 crud.insertRow(db, 'Album(Name, Year, ArtistId, FormatId, GenreId)', detail)
