@@ -1,3 +1,8 @@
+2021-10-11  steve  <steve@brian.roundabout.int>
+
+	* src/dbimport.py: Fixes for 'is', 'is not' changes in Python 3.8
+	* src/crud.py: Fixes for 'is', 'is not' changes in Python 3.8
+
 2021-10-11	Steve Martin  <kronostar.st4@gmail.com>
 	* Python bumped to 3.9
 	* Copyright bumped
